# sphinx-cmake

./: README.md
.github/workflows/: tests.yml
cmake/: BuildTimeConfigureFile.cmake  FindSphinx.cmake
tests/: CMakeLists.txt
tests/src/: conf.py  index.rst
